# AdventOfCode2024

./: .pre-commit-config.yaml  pyproject.toml
aoc/: day0.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day10.py  day11.py  day12.py  day13.py
